# floenergy-nem12-parser

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  parse.py  pyproject.toml  pytest.ini  sample.csv
lib/: MeterReading.py  Nem12Parser.py  __init__.py
tests/: MeterReading_test.py  Nem12Parser_test.py  parse_test.py
