[tool.poetry]
name = "floenergy-nem12-parser"
version = "0.1.0"
description = ""
authors = ["Finn Woelm <7606194+FinnWoelm@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
pytest-icdiff = "^0.9"
pytest-only = "^2.1.1"
pytest-describe = "^2.2.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
